<resources>
    <string name="app_name">Sejo</string>

    <!--    Validate Phone Number -->
    <string name="validate_phone_number_button_caption">Continuar</string>
    <string name="component_phone_number_prefix_es">+34</string>
    <string name="component_phone_number_error">Formato incorrecto</string>

    <!-- validate sms -->
    <string name="validate_sms_error_label">Código erróneo</string>
    <string name="validate_sms_expired_label">Código caducado</string>
    <string name="validate_sms_footer_resend_text"><![CDATA[Si no te llega el código, haz <font color=#ff0068>click aquí</font> y te lo reenviamos.]]></string>
    <string name="validate_sms_footer_waiting_text">Si no te llega el código podrás reenviarlo en %1$s</string>
    <string name="component_validate_sms_title"><![CDATA[Introduce el código enviado por SMS al <b>%1$s</b>]]></string>

    <!--numeric keyboard -->
    <string name="component_numeric_keyboard_reset_pin"><u>¿Has olvidado tu número Pin?</u></string>
    <string name="component_pin_screen_subheader_error_text">El número Pin no coincide</string>
    <string name="fragment_login_with_fingerprint_text">Desbloqueo biométrico</string>
    <string name="fragment_login_with_fingerprint_use_pin_text">Usar número Pin</string>

    <!--  Validate number  -->
    <string name="fragment_validate_number_title">Número de teléfono</string>


    <!--  Create Pin  -->
    <string name="fragment_pin_creation_toolbar_title">Crear Pin</string>
    <string name="fragment_pin_creation_step_1_header">Elegir un Pin de 4 dígitos</string>
    <string name="fragment_pin_creation_step_2_header">Vuelve a introducir tu Pin</string>
    <string name="create_pin_menu_item">OK</string>

    <!--  Login  -->
    <string name="fragment_login_title">Introduce tu pin de siempre</string>

    <!--  Personal Info  -->
    <string name="fragment_personal_info_header">Por último, introduzca su nombre:</string>
    <string name="fragment_personal_info_button_caption">Finalizar</string>
    <!--  Group Main info -->
    <string name="fragment_group_creation_main_info_title">Crear Grupo</string>
    <string name="fragment_group_creation_main_info_header">¿Cómo quieres que se llame tu grupo?</string>
    <string name="fragment_group_creation_main_info_button_caption">Continuar</string>
    <string name="fragment_group_creation_main_info_name_hint">nombre</string>
    <string name="fragment_group_creation_main_info_admins_hint">nº de admins</string>
    <string name="fragment_group_creation_main_admins_explanation1">Los administradores se encargan de validar peticiones de dinero del bote por parte de los demás miembros, así como pagos que pudiera hacer un miembro al bote desde fuera de la aplicación, bien sea con dinero en efectivo o con cualquier otro método de pago.</string>
    <string name="fragment_group_creation_main_admins_explanation2">Se necesita un mínimo de dos administradores por grupo, ya que un administrador no puede validarse sus propios movimientos.</string>
    <string name="fragment_group_creation_main_admins_error">Valor incorrecto</string>

    <!-- Group Member Selection -->
    <string name="fragment_group_creation_members_header_text">Acceso a los contactos</string>
    <string name="fragment_group_creation_members_subheader_text">Para poder añadir amigos a tu grupo necesitas permitir acceso a los contactos de tu teléfono</string>
    <string name="fragment_group_creation_members_permissions_button_caption">Permitir Acceso</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="fragment_biometric_permission_header_text">Iniciar la sesión con reconocimiento biométrico</string>
    <string name="fragment_biometric_permission_subheader_text">Activa la huella dactilar para acceder a tus grupos de manera más rápida y segura</string>
    <string name="fragment_biometric_permission_activate_button_caption">Activar Biometría</string>
    <string name="fragment_biometric_permission_not_now_button_caption">Por ahora no</string>

    <string name="fragment_group_creation_members_add_members_error">Añade al menos un contacto</string>
    <string name="fragment_group_creation_members_min_admins_error">El número mínimo de administradores es %1$s</string>
    <string name="fragment_group_creation_main_fee_header">Cuota de acceso al grupo</string>
    <string name="fragment_group_creation_main_info_fee_hint">Cuota</string>
    <string name="component_phone_contact_thumbnail_owner">Yo</string>

    <!-- Bottom Menu -->
    <string name="bottom_menu_dashboard">Grupo</string>
    <string name="bottom_menu_members">Miembros</string>
    <string name="bottom_menu_payments">Pagos</string>
    <string name="bottom_menu_more">Más</string>

    <!-- Groups Fragment -->
    <string name="fragment_groups_last_group_selected_title">Último grupo usado</string>
    <string name="fragment_groups_list_title">Grupos</string>

    <!-- More Fragment -->
    <string name="fragment_more_title">Más</string>
    <string name="fragment_more_my_groups">Mis grupos</string>

    <!-- Selected group -->
    <string name="fragment_selected_group_no_one_selected_caption">Ir a Mis Grupos</string>
    <string name="fragment_selected_group_no_one_selected_title">Parece que aun no has seleccionado ningún grupo.</string>

    <!-- Members Fragment -->
    <string name="fragment_members_header">Miembros del grupo</string>


</resources>