<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.groupcretion.GroupCreationMainInfoFragment">

        <ScrollView
            android:id="@+id/fragment_group_creation_main_info_scrollable_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/fragment_group_creation_main_info_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragment_group_creation_main_info_name_header"
                    style="@style/SimpleTextLabelMediumBlack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fragment_group_creation_main_info_header"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_group_creation_main_info_name_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_group_creation_main_info_name_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/fragment_group_creation_main_info_name_hint"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_group_creation_main_info_admins_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_group_creation_main_info_name_header">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_group_creation_main_info_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:text="grupo"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/fragment_group_creation_main_info_admins_header"
                    style="@style/SimpleTextLabelMediumBlack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fragment_group_creation_main_admins_header"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_group_creation_main_info_admins_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_group_creation_main_info_name_container"
                    app:layout_constraintVertical_bias="1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_group_creation_main_info_admins_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/fragment_group_creation_main_info_admins_hint"
                    app:flow_verticalBias="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_group_creation_main_info_admins_header">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_group_creation_main_info_admins"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned"
                        android:text="1"
                        android:textAlignment="center"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/fragment_group_creation_main_info_button"
            style="@style/SejoButton.Candy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/fragment_group_creation_main_info_button_caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_group_creation_main_info_scrollable_container"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>